# pinnacle_io

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
docs/: models.md  prd.txt  product_requirements.md  tasks.md
pinnacle_io/: config.py
pinnacle_io/models/: __init__.py  beam.py  compensator.py  control_point.py  cp_manager.py  dose.py  dose_engine.py  dose_grid.py  image_info.py  image_set.py  institution.py  machine.py  machine_angle.py  machine_config.py  machine_energy.py  mlc.py  monitor_unit_info.py  patient.py  patient_lite.py  patient_representation.py  patient_setup.py  pinnacle_base.py  plan.py  point.py  prescription.py  roi.py  trial.py  types.py  versioned_base.py  wedge_context.py
pinnacle_io/readers/: __init__.py  dose_reader.py  image_set_reader.py  institution_reader.py  machine_reader.py  patient_reader.py  patient_setup_reader.py  pinnacle_file_reader.py  plan_reader.py  point_reader.py  roi_reader.py  trial_reader.py
pinnacle_io/utils/: converters.py  patient_enum.py
pinnacle_io/writers/: __init__.py  beam_writer.py  control_point_writer.py  dose_writer.py  image_set_writer.py  institution_writer.py  machine_writer.py  patient_setup_writer.py  patient_writer.py  plan_writer.py  point_writer.py  roi_writer.py  trial_writer.py
tests/: conftest.py  test_beam.py  test_compensator.py  test_control_point.py  test_cp_manager.py  test_dose.py  test_dose_edge_cases.py  test_dose_engine.py  test_dose_grid.py  test_image_info.py  test_image_set.py  test_institution.py  test_machine.py  test_machine_angle.py  test_machine_config.py  test_machine_energy.py  test_max_dose_point.py  test_mlc.py  test_monitor_unit_info.py  test_patient.py  test_patient_lite.py  test_patient_representation.py  test_patient_setup.py  test_pinnacle_base.py  test_pinnacle_file_reader.py  test_plan.py  test_point.py  test_prescription.py  test_roi.py  test_trial.py  test_wedge_context.py
tests/test_data/01/: Institution
tests/test_data/01/Institution_1/Mount_0/Patient_1/: ImageSet_0.ImageInfo  ImageSet_0.header  Patient
tests/test_data/01/Institution_1/Mount_0/Patient_1/Plan_0/: plan.PatientSetup  plan.Pinnacle.Machines  plan.Points  plan.Trial  plan.Trial.binary.002  plan.Trial.binary.008  plan.Trial.binary.009  plan.Trial.binary.025  plan.roi
tests/test_data/01/Physics/ReadOnlyMachineDB/Machine.0/: Pinnacle.Machine
